Add contents for node
